--- a/09.glmm_part1/slides/glmm1.Rnw
+++ b/09.glmm_part1/slides/glmm1.Rnw
@@ -207,7 +207,7 @@ setPar()
 %%%%%%%%%%%
 
 \begin{frame}[fragile]{Logistic regression}
-  \begin{itemize}[<+->]
+  \begin{itemize}
     \item Binary or proportion data (survival, presence/absence\dots)
     \item Binomial probability distribution ( = Bernouilly if binary data)
     \item Link function often logit: $y=\log(\frac{probability}{1-probability})$
@@ -215,6 +215,7 @@ setPar()
     \item Linear function $y = intercept + slope_1 predictor_1 + slope_2 predictor_2 +$ \dots
   \end{itemize}
 
+\pause
   Binomial (and Bernouilli distribution in R):
   <<eval = FALSE>>=
     
@@ -223,7 +224,7 @@ setPar()
     mean(bernouilli_random_sample); 0.3
     var(bernouilli_random_sample); 0.3*(1-0.3)
   @
-  
+  \pause
   Logistic regression in R:
   <<eval=FALSE>>=
     glm(formula = obs ~ 1 + x, family = "binomial", data=data)
@@ -251,15 +252,197 @@ setPar()
     write.csv(dat, file = "survivalsize.csv", quote = FALSE, row.names = FALSE)
   @
 
-  <<>>=
-    dat <- read.csv("survivalsize.csv") 
-    
-  @
+
 
   \begin{exampleblock}{Exercise}
     \begin{enumerate}
+      \item Load \texttt{survivalsize.csv}
+      \item Plot survival data. What kind of distribution is it?
+      \item Fit a linear model and a logistic model with intercept only. How to interpret the estimate?
+      \item Fit a linear regression and a logistic regression of survival on relative size, compare the output
+      \item Check the diagnostic plots for both models. Should you be worried?
+      \item Extract and visualize a model prediction from both models (use the function predict, and/or do it by hand to practice link-function back-transformation)
     \end{enumerate}
   \end{exampleblock}
+
+  <<echo=FALSE, eval=FALSE>>=
+    dat <- read.csv("survivalsize.csv") 
+    plot(dat$survival)
+    hist(dat$survival)
+    
+    summary(glm(survival ~ 1, data=dat, family = "gaussian"))
+    summary(glm(survival ~ 1, data=dat, family = "binomial"))
+    1/(1+exp(-0.2209))
+    mean(dat$survival)
+    
+    summary(lm1 <- glm(survival ~ 1 + relative_size, data=dat, family = "gaussian"))
+    summary(glm1 <- glm(survival ~ 1 + relative_size, data=dat, family = "binomial"))
+    1/(1+exp(-0.56-2.8078*mean(dat$relative_size)))
+
+    plot(dat$relative_size, dat$survival, ylab="survival probability",
+         xlab="relative size")
+    ndat <- data.frame(relative_size = seq(-3,3, length.out = 100))  
+    ndat <- cbind(ndat, predict(lm1, newdata = ndat),
+                  predict(glm1, newdata = ndat, type = "response"))
+    lines(ndat[,1], ndat[,2], col="red")
+    lines(ndat[,1], ndat[,3], col="blue")
+  @
+\end{frame}
+%%%%%%%%%%%
+
+\begin{frame}{Logistic regression: Jensen's inequality}
+\end{frame}
+%%%%%%%%%%%
+
+\begin{frame}{Logistic regression: trivia}
+
+  \begin{itemize}[<+->]
+    \item Many other link-functions, e.g. probit has nice properties to measure selection
+    \item logit and inverse-logit functions in boot and mixtools packages
+    \item exp(slope) is an odd-ratio 
+    \item GLMs on binary data are more (or equally) powerful than proportion data
+  \end{itemize}
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}[fragile]{Poisson regression}
+  \begin{itemize}
+    \item Count data
+    \item Poisson distribution
+    \item Link function: logarithm
+    \item Inverse link function: exponential
+    \item Linear function $y = intercept + slope_1 predictor_1 + slope_2 predictor_2 +$ \dots
+  \end{itemize}
+  
+  \pause
+  Poisson distribution in R:
+  <<eval=FALSE>>=
+    poisson_random_sample <- rpois(n = 10000, lambda = 4)  
+    hist(poisson_random_sample)
+    mean(poisson_random_sample)
+    var(poisson_random_sample)
+  @
+  \pause
+  Poisson regression in R:
+  <<eval=FALSE>>=
+    glm(formula = obs ~ 1 + x, family = "poisson", data = data)  
+  @
+\end{frame}
+%%%%%%%%%%%
+
+\begin{frame}[fragile]{Poisson regression}
+
+<<eval=FALSE, echo=FALSE>>=
+  x <-     
+@
+  
+  
+  \begin{exampleblock}{Exercise}
+    \begin{enumerate}
+      \item Load the data reproduction.csv
+      \item Plot reproduction data, calculate the mean and variance. 
+      \item Overlay a Gaussian distribution of same mean and variance, does it fit?
+      \item Fit an compare a lm and a Poisson glm of reproduction on size 
+      \item Check the diagnostic plots for both models. Should you be worried?
+      \item Extract and visualize a model prediction from both models (use the function predict, and/or do it by hand to practice link-function back-transformation)
+      \item Before GLMs, researchers used to log-transform the data and fit linear models. What are the problems with this approach?
+    \end{enumerate}
+  \end{exampleblock}
+
+\end{frame}
+%%%%%%%%%%%
+
+\begin{frame}[fragile]{Poisson regression: over-dispersion}
+  \begin{alertblock}{Sadly, simple Poisson models are almost always wrong in natura}
+    \begin{itemize}[<+->]
+      \item Poisson assumes: expected value = values variance
+      \item True if all the sources of variation are in the model (almost impossible)
+      \item Main risk:
+        \begin{itemize}
+          \item underestimate uncertainty 
+          \item anti-conservative p-values
+          \item find effects that are not real
+        \end{itemize}
+      \item Opposite risk rare but possible (e.g., bird clutch size)
+      \item Solutions: relax mean/variance relationship
+        \begin{itemize}
+          \item Negative-binomial distribution 
+          \item Quasi-Poisson (multiplicative over-dispersion)
+          \item Observation-level random effect (additive over-dispersion)
+        \end{itemize}
+      \item \textbf{You should NEVER use glm(family $=$ poisson) again!}
+    \end{itemize}
+  \end{alertblock}
+  
+\end{frame}
+%%%%%%%%%%%
+
+ \begin{frame}[fragile]{Poisson regression: over-dispersion demonstrated}
+
+  <<>>=
+     set.seed(123) # random seed
+     x <- rnorm(100) # predictor with no effect
+     y <- exp(-1 + rnorm(100, 0, 2)) # variation of unknown origin
+     obs <- sapply(y, FUN = function(y){
+       rpois(n = 1, lambda = y)}) # generate Poisson data
+   
+     #plot(x, obs) # visualize data
+     glm2 <- glm(obs ~ x, family = "poisson") #fit Poisson regression
+     sglm2 <- summary(glm2) #look at the summary
+     sglm2$coefficients[2,4] # the p-value 
+     
+     glm2q <- glm(obs ~ x, family = "quasipoisson") #quasiPoisson regression
+     sglm2q <- summary(glm2q) #summary
+     sglm2q$coefficients[2,4] # p-value
+ @
+ 
+\end{frame}
+%%%%%%%%%%%
+
+\begin{frame}[fragile]{Poisson regression: over-dispersion demonstrated}
+
+
+ Maybe just bad luck?
+\begin{exampleblock}{Exercise}
+  Write a for loop to look at the distribution of p-values
+\end{exampleblock}
+
+<<eval=FALSE>>=
+    set.seed( )
+    poisson_pvalues <- vector(length = 1000)
+    quasipoisson_pvalues <-
+    for(i in  )
+    {
+      simulation + poisson and quasipoisson GLMs
+    }
+    hist( )
+    mean( <0.05)
+@
+
+% 
+%     <<echo=FALSE, eval=FALSE>>=
+%     set.seed(123)
+%     pvvector <- vector(length = 1000)
+%     pvvectorq <- vector(length = 1000)
+%     for (i in 1:1000)
+%     {
+%     x <- rnorm(100)
+%     y <- exp(-1 + rnorm(100, 0, 2))
+%     obs <- sapply(y, FUN = function(x){rpois(n = 1, lambda = x)})
+%     glm2 <- glm(obs ~ x, family = "poisson")
+%     sglm2 <- summary(glm2)
+%     pvvector[i] <- sglm2$coefficients[2,4]
+% 
+%     glm2q <- glm(obs ~ x, family = "quasipoisson")
+%     sglm2q <- summary(glm2q)
+%     pvvectorq[i] <- sglm2q$coefficients[2,4]
+%     }
+%     hist(pvvector); mean(pvvector<0.05)
+%     hist(pvvectorq) ; mean(pvvectorq<0.05)
+%   @
+% 
+
 \end{frame}
 %%%%%%%%%%%
 
