--- a/09.glmm_part1/slides/glmm1.tex
+++ b/09.glmm_part1/slides/glmm1.tex
@@ -194,20 +194,22 @@
     \item A probability distribution (Bernouilli, Binomial, Poisson\dots)
     \item A "link function" to convert between the scale of the linear function ($-\infty$ to $+\infty$) and the scale of the data and the probability distribution (often positive integer: 0, 1, 2, 3\dots)
   \end{enumerate}
+  A GLM fits a continuous expected response; we observe discrete realizations
 \end{block}
 
 \end{frame}
 %%%%%%%%%%%
 
 \begin{frame}[fragile]{Logistic regression}
-  \begin{itemize}[<+->]
-    \item Binary or proportion data
+  \begin{itemize}
+    \item Binary or proportion data (survival, presence/absence\dots)
     \item Binomial probability distribution ( = Bernouilly if binary data)
     \item Link function often logit: $y=\log(\frac{probability}{1-probability})$
     \item Back-transformation inverse-logit: $probability = \frac{1}{1 + exp(-y)}$
     \item Linear function $y = intercept + slope_1 predictor_1 + slope_2 predictor_2 +$ \dots
   \end{itemize}
 
+\pause
   Binomial (and Bernouilli distribution in R):
 \begin{knitrout}\small
 \definecolor{shadecolor}{rgb}{0.843, 0.867, 0.922}\color{fgcolor}\begin{kframe}
@@ -219,7 +221,7 @@
 \end{alltt}
 \end{kframe}
 \end{knitrout}
-  
+  \pause
   Logistic regression in R:
 \begin{knitrout}\small
 \definecolor{shadecolor}{rgb}{0.843, 0.867, 0.922}\color{fgcolor}\begin{kframe}
@@ -232,7 +234,203 @@
 \end{frame}
 %%%%%%%%%%%
 
+\begin{frame}[fragile]{Logistic regression}
+  
+  %data prep
 
 
+
+
+  \begin{exampleblock}{Exercise}
+    \begin{enumerate}
+      \item Load \texttt{survivalsize.csv}
+      \item Plot survival data. What kind of distribution is it?
+      \item Fit a linear model and a logistic model with intercept only. How to interpret the estimate?
+      \item Fit a linear regression and a logistic regression of survival on relative size, compare the output
+      \item Check the diagnostic plots for both models. Should you be worried?
+      \item Extract and visualize a model prediction from both models (use the function predict, and/or do it by hand to practice link-function back-transformation)
+    \end{enumerate}
+  \end{exampleblock}
+
+
+\end{frame}
+%%%%%%%%%%%
+
+\begin{frame}{Logistic regression: Jensen's inequality}
+\end{frame}
+%%%%%%%%%%%
+
+\begin{frame}{Logistic regression: trivia}
+
+  \begin{itemize}[<+->]
+    \item Many other link-functions, e.g. probit has nice properties to measure selection
+    \item logit and inverse-logit functions in boot and mixtools packages
+    \item exp(slope) is an odd-ratio 
+    \item GLMs on binary data are more (or equally) powerful than proportion data
+  \end{itemize}
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}[fragile]{Poisson regression}
+  \begin{itemize}
+    \item Count data
+    \item Poisson distribution
+    \item Link function: logarithm
+    \item Inverse link function: exponential
+    \item Linear function $y = intercept + slope_1 predictor_1 + slope_2 predictor_2 +$ \dots
+  \end{itemize}
+  
+  \pause
+  Poisson distribution in R:
+\begin{knitrout}\small
+\definecolor{shadecolor}{rgb}{0.843, 0.867, 0.922}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+  \hlstd{poisson_random_sample} \hlkwb{<-} \hlkwd{rpois}\hlstd{(}\hlkwc{n} \hlstd{=} \hlnum{10000}\hlstd{,} \hlkwc{lambda} \hlstd{=} \hlnum{4}\hlstd{)}
+  \hlkwd{hist}\hlstd{(poisson_random_sample)}
+  \hlkwd{mean}\hlstd{(poisson_random_sample)}
+  \hlkwd{var}\hlstd{(poisson_random_sample)}
+\end{alltt}
+\end{kframe}
+\end{knitrout}
+  \pause
+  Poisson regression in R:
+\begin{knitrout}\small
+\definecolor{shadecolor}{rgb}{0.843, 0.867, 0.922}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+  \hlkwd{glm}\hlstd{(}\hlkwc{formula} \hlstd{= obs} \hlopt{~} \hlnum{1} \hlopt{+} \hlstd{x,} \hlkwc{family} \hlstd{=} \hlstr{"poisson"}\hlstd{,} \hlkwc{data} \hlstd{= data)}
+\end{alltt}
+\end{kframe}
+\end{knitrout}
+\end{frame}
+%%%%%%%%%%%
+
+\begin{frame}[fragile]{Poisson regression}
+
+
+  
+  
+  \begin{exampleblock}{Exercise}
+    \begin{enumerate}
+      \item Load the data reproduction.csv
+      \item Plot reproduction data, calculate the mean and variance. 
+      \item Overlay a Gaussian distribution of same mean and variance, does it fit?
+      \item Fit an compare a lm and a Poisson glm of reproduction on size 
+      \item Check the diagnostic plots for both models. Should you be worried?
+      \item Extract and visualize a model prediction from both models (use the function predict, and/or do it by hand to practice link-function back-transformation)
+      \item Before GLMs, researchers used to log-transform the data and fit linear models. What are the problems with this approach?
+    \end{enumerate}
+  \end{exampleblock}
+
+\end{frame}
+%%%%%%%%%%%
+
+\begin{frame}[fragile]{Poisson regression: over-dispersion}
+  \begin{alertblock}{Sadly, simple Poisson models are almost always wrong in natura}
+    \begin{itemize}[<+->]
+      \item Poisson assumes: expected value = values variance
+      \item True if all the sources of variation are in the model (almost impossible)
+      \item Main risk:
+        \begin{itemize}
+          \item underestimate uncertainty 
+          \item anti-conservative p-values
+          \item find effects that are not real
+        \end{itemize}
+      \item Opposite risk rare but possible (e.g., bird clutch size)
+      \item Solutions: relax mean/variance relationship
+        \begin{itemize}
+          \item Negative-binomial distribution 
+          \item Quasi-Poisson (multiplicative over-dispersion)
+          \item Observation-level random effect (additive over-dispersion)
+        \end{itemize}
+      \item \textbf{You should NEVER use glm(family $=$ poisson) again!}
+    \end{itemize}
+  \end{alertblock}
+  
+\end{frame}
+%%%%%%%%%%%
+
+ \begin{frame}[fragile]{Poisson regression: over-dispersion demonstrated}
+
+\begin{knitrout}\small
+\definecolor{shadecolor}{rgb}{0.843, 0.867, 0.922}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+   \hlkwd{set.seed}\hlstd{(}\hlnum{123}\hlstd{)} \hlcom{# random seed}
+   \hlstd{x} \hlkwb{<-} \hlkwd{rnorm}\hlstd{(}\hlnum{100}\hlstd{)} \hlcom{# predictor with no effect}
+   \hlstd{y} \hlkwb{<-} \hlkwd{exp}\hlstd{(}\hlopt{-}\hlnum{1} \hlopt{+} \hlkwd{rnorm}\hlstd{(}\hlnum{100}\hlstd{,} \hlnum{0}\hlstd{,} \hlnum{2}\hlstd{))} \hlcom{# variation of unknown origin}
+   \hlstd{obs} \hlkwb{<-} \hlkwd{sapply}\hlstd{(y,} \hlkwc{FUN} \hlstd{=} \hlkwa{function}\hlstd{(}\hlkwc{y}\hlstd{)\{}
+     \hlkwd{rpois}\hlstd{(}\hlkwc{n} \hlstd{=} \hlnum{1}\hlstd{,} \hlkwc{lambda} \hlstd{= y)\})} \hlcom{# generate Poisson data}
+
+   \hlcom{#plot(x, obs) # visualize data}
+   \hlstd{glm2} \hlkwb{<-} \hlkwd{glm}\hlstd{(obs} \hlopt{~} \hlstd{x,} \hlkwc{family} \hlstd{=} \hlstr{"poisson"}\hlstd{)} \hlcom{#fit Poisson regression}
+   \hlstd{sglm2} \hlkwb{<-} \hlkwd{summary}\hlstd{(glm2)} \hlcom{#look at the summary}
+   \hlstd{sglm2}\hlopt{$}\hlstd{coefficients[}\hlnum{2}\hlstd{,}\hlnum{4}\hlstd{]} \hlcom{# the p-value }
+\end{alltt}
+\begin{verbatim}
+[1] 1.25526e-49
+\end{verbatim}
+\begin{alltt}
+   \hlstd{glm2q} \hlkwb{<-} \hlkwd{glm}\hlstd{(obs} \hlopt{~} \hlstd{x,} \hlkwc{family} \hlstd{=} \hlstr{"quasipoisson"}\hlstd{)} \hlcom{#quasiPoisson regression}
+   \hlstd{sglm2q} \hlkwb{<-} \hlkwd{summary}\hlstd{(glm2q)} \hlcom{#summary}
+   \hlstd{sglm2q}\hlopt{$}\hlstd{coefficients[}\hlnum{2}\hlstd{,}\hlnum{4}\hlstd{]} \hlcom{# p-value}
+\end{alltt}
+\begin{verbatim}
+[1] 0.09476039
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+ 
+\end{frame}
+%%%%%%%%%%%
+
+\begin{frame}[fragile]{Poisson regression: over-dispersion demonstrated}
+
+
+ Maybe just bad luck?
+\begin{exampleblock}{Exercise}
+  Write a for loop to look at the distribution of p-values
+\end{exampleblock}
+
+\begin{knitrout}\small
+\definecolor{shadecolor}{rgb}{0.843, 0.867, 0.922}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+    \hlkwd{set.seed}( )
+    poisson_pvalues <- \hlkwd{vector}(length = 1000)
+    quasipoisson_pvalues <-
+    \hlkwd{for}(i in  )
+    \{
+      simulation + poisson and quasipoisson GLMs
+    \}
+    \hlkwd{hist}( )
+    \hlkwd{mean}( <0.05)
+\end{alltt}
+\end{kframe}
+\end{knitrout}
+
+% 
+%     <<echo=FALSE, eval=FALSE>>=
+%     set.seed(123)
+%     pvvector <- vector(length = 1000)
+%     pvvectorq <- vector(length = 1000)
+%     for (i in 1:1000)
+%     {
+%     x <- rnorm(100)
+%     y <- exp(-1 + rnorm(100, 0, 2))
+%     obs <- sapply(y, FUN = function(x){rpois(n = 1, lambda = x)})
+%     glm2 <- glm(obs ~ x, family = "poisson")
+%     sglm2 <- summary(glm2)
+%     pvvector[i] <- sglm2$coefficients[2,4]
+% 
+%     glm2q <- glm(obs ~ x, family = "quasipoisson")
+%     sglm2q <- summary(glm2q)
+%     pvvectorq[i] <- sglm2q$coefficients[2,4]
+%     }
+%     hist(pvvector); mean(pvvector<0.05)
+%     hist(pvvectorq) ; mean(pvvectorq<0.05)
+%   @
+% 
+
+\end{frame}
+%%%%%%%%%%%
 
 \end{document}
