--- a/09.glmm_part1/slides/glmm1.tex
+++ b/09.glmm_part1/slides/glmm1.tex
@@ -256,10 +256,6 @@
 \end{frame}
 %%%%%%%%%%%
 
-\begin{frame}{Logistic regression: Jensen's inequality}
-\end{frame}
-%%%%%%%%%%%
-
 \begin{frame}{Logistic regression: trivia}
 
   \begin{itemize}[<+->]
@@ -321,6 +317,8 @@
       \item Before GLMs, researchers used to log-transform the data and fit linear models. What are the problems with this approach?
     \end{enumerate}
   \end{exampleblock}
+  
+
 
 \end{frame}
 %%%%%%%%%%%
@@ -433,4 +431,12 @@
 \end{frame}
 %%%%%%%%%%%
 
+\begin{frame}{Extras}
+  If time allows:
+  \begin{itemize}
+    \item Jensen inequality
+    \item Poisson model in MCMCglmm
+  \end{itemize}
+\end{frame}
+%%%%%%%%%%%
 \end{document}
