--- a/09.glmm_part1/slides/glmm1.Rnw
+++ b/09.glmm_part1/slides/glmm1.Rnw
@@ -143,7 +143,7 @@ setPar()
 
   <<binlmprinc3, echo=FALSE, dev='tikz', out.width="0.7\\textwidth", out.height="0.53\\textwidth">>=
     setPar()
-    plot(x, obs, xlab="\\color{orange}{Predictor}", ylab="\\color{purple}{Response}", xlim = c(-3,3), ylim=c(-0.5,1.5))
+    plot(x, obs, xlab="\\color{orange}{Predictor}", ylab="\\color{purple}{Response}", xlim = c(-3,3), ylim=c(-0.5,1.5), main="Confidence and prediction intervals")
     abline(lm0, col="red", lwd=5)
     abline(h=coef(lm0)[1], lty=2, col="blue", lwd=5)
     abline(v=0)
@@ -152,6 +152,9 @@ setPar()
     ndat <- data.frame(x=seq(-2.9,2.9, length.out = 100))
     ndat <- cbind(ndat, predict(lm0, newdata =ndat, interval = "prediction"))
     polygon(x=c(ndat$x, rev(ndat$x)), y=c(ndat$lwr, rev(ndat$upr)), border = NA, col=rgb(0.5,0,0,0.4))
+    ndat2 <- data.frame(x=seq(-2.9,2.9, length.out = 100))
+    ndat2 <- cbind(ndat2, predict(lm0, newdata =ndat2, interval = "confidence"))
+    polygon(x=c(ndat2$x, rev(ndat2$x)), y=c(ndat2$lwr, rev(ndat2$upr)), border = NA, col=rgb(0.5,0,0,0.4))
   @
   \begin{alertblock}{Practical consequences:}
     Non-sensical predictions, wrong confidence-interval and p-value, extrapolation ALWAYS fails
@@ -162,20 +165,27 @@ setPar()
 \begin{frame}[fragile]{What we want our model to do}
   <<binglmprinc, echo=FALSE, dev='tikz', out.width="0.7\\textwidth", out.height="0.53\\textwidth">>=
     setPar()
-    plot(x, obs, xlab="\\color{orange}{Predictor}", ylab="\\color{purple}{Response}", xlim = c(-3,3), ylim=c(-0.5,1.5))
+    plot(x, obs, xlab="\\color{orange}{Predictor}", ylab="\\color{purple}{Response}", xlim = c(-3,3), ylim=c(-0.5,1.5), main="Confidence and prediction intervals")
     glm0 <- glm(obs~x, family="binomial")
     ndat <- data.frame(x=seq(-2.9,2.9, length.out = 100))
     ndat <- cbind(ndat, predict.glm(glm0, newdata =ndat, se.fit = TRUE))
     ndat$lci <- ndat$fit - 1.96*ndat$se.fit
     ndat$hci <- ndat$fit + 1.96*ndat$se.fit
       
+    ndat2 <- data.frame(x=seq(-2.9,2.9, length.out = 100))
+    ndat2 <- cbind(ndat2, predict.glm(glm0, newdata =ndat2, se.fit = TRUE))
+    ndat2$lci <- sapply(X = 1/(1+exp(-ndat2$fit)), FUN = function(x) {max(0, x - 1.96*sqrt(x*(1-x)))})
+    ndat2$hci <- sapply(X = 1/(1+exp(-ndat2$fit)), FUN = function(x) {min(1, x + 1.96*sqrt(x*(1-x)))})
+    ndat2$lci[ndat2$lci>1/(1+exp(-ndat$lci))] <- 1/(1+exp(-ndat$lci[ndat2$lci>1/(1+exp(-ndat$lci))]))
+    ndat2$hci[ndat2$hci<1/(1+exp(-ndat$hci))] <- 1/(1+exp(-ndat$hci[ndat2$hci<1/(1+exp(-ndat$hci))]))
+  
     lines(ndat$x, 1/(1+exp(-ndat$fit)), col="red", lwd=5)
     abline(h=1/(1+exp(-coef(glm0)[1])), lty=2, col="blue", lwd=5)
     abline(v=0)
     abline(h=0)
    arrows(x0 = x, y0=obs, y1=1/(1+exp(-predict(glm0))), code=0, col="gray", lwd=3)
     polygon(x=c(ndat$x, rev(ndat$x)), y=1/(1+exp(-c(ndat$lci, rev(ndat$hci)))), border = NA, col=rgb(0.5,0,0,0.4))
-
+    polygon(x=c(ndat2$x, rev(ndat2$x)), y=c(ndat2$lci, rev(ndat2$hci)), border = NA, col=rgb(0.5,0,0,0.4))
   @
     \begin{alertblock}{Good features:}
     Never out of [0,1], variable uncertainty, non-linear trend, close fit
